Added Inverter add and edit form. Started moving paths to settings.

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -5,5 +5,14 @@
     <Setting Name="ProgramDataPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="CommSitePath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="MPWarrantyPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SEWarrantyPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
