--- a/App.config
+++ b/App.config
@@ -13,6 +13,15 @@
             <setting name="ProgramDataPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="CommSitePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MPWarrantyPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SEWarrantyPath" serializeAs="String">
+                <value />
+            </setting>
         </Handover_Pack_Compiler.Properties.Settings>
     </userSettings>
 </configuration>
