--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -83,6 +83,12 @@
   <ItemGroup>
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="DataFormats.cs" />
+    <Compile Include="InverterValuesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InverterValuesForm.Designer.cs">
+      <DependentUpon>InverterValuesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PackCompiler.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="InverterValuesForm.resx">
+      <DependentUpon>InverterValuesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PackCompiler.resx">
       <DependentUpon>PackCompiler.cs</DependentUpon>
     </EmbeddedResource>
