--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -102,6 +102,12 @@
     <Compile Include="PackCompiler.Designer.cs">
       <DependentUpon>PackCompiler.cs</DependentUpon>
     </Compile>
+    <Compile Include="PathButton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PathButton.Designer.cs">
+      <DependentUpon>PathButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
@@ -114,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PackCompiler.resx">
       <DependentUpon>PackCompiler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PathButton.resx">
+      <DependentUpon>PathButton.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
