--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -115,6 +115,7 @@
     <Compile Include="FilePathButton.Designer.cs">
       <DependentUpon>FilePathButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="PackStructure.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
@@ -147,6 +148,7 @@
     <None Include="Properties\DataSources\Handover_Pack_Compiler.Properties.Settings.datasource" />
     <None Include="Properties\DataSources\InverterData.datasource" />
     <None Include="Properties\DataSources\ModuleData.datasource" />
+    <None Include="Properties\DataSources\PackStructure.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
