--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -117,6 +117,12 @@
       <DependentUpon>FilePathButton.cs</DependentUpon>
     </Compile>
     <Compile Include="PackStructure.cs" />
+    <Compile Include="PackStructureTree.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PackStructureTree.Designer.cs">
+      <DependentUpon>PackStructureTree.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
@@ -135,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FilePathButton.resx">
       <DependentUpon>FilePathButton.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PackStructureTree.resx">
+      <DependentUpon>PackStructureTree.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
