--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -82,6 +82,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CMessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CMessageBox.Designer.cs">
+      <DependentUpon>CMessageBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="DefaultPath.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="DataFormats.cs" />
@@ -105,6 +111,12 @@
       <DependentUpon>ModuleValuesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="NameCompare.cs" />
+    <Compile Include="NewPackNumberRequest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewPackNumberRequest.Designer.cs">
+      <DependentUpon>NewPackNumberRequest.cs</DependentUpon>
+    </Compile>
     <Compile Include="PackCompiler.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +141,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Utilities.cs" />
+    <EmbeddedResource Include="CMessageBox.resx">
+      <DependentUpon>CMessageBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FolderPathButton.resx">
       <DependentUpon>FolderPathButton.cs</DependentUpon>
     </EmbeddedResource>
@@ -137,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ModuleValuesForm.resx">
       <DependentUpon>ModuleValuesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewPackNumberRequest.resx">
+      <DependentUpon>NewPackNumberRequest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PackCompiler.resx">
       <DependentUpon>PackCompiler.cs</DependentUpon>
