--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -82,6 +82,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\PartSelectors\InverterSelector.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\PartSelectors\InverterSelector.Designer.cs">
+      <DependentUpon>InverterSelector.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\PartUIs\InverterUI.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\PartUIs\InverterUI.Designer.cs">
+      <DependentUpon>InverterUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\CMessageBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,10 +104,10 @@
     <Compile Include="Utilities\ExtensionMethods.cs" />
     <Compile Include="Classes\DataFormats.cs" />
     <Compile Include="Utilities\FileTypeTag.cs" />
-    <Compile Include="Controls\FileUI.cs">
+    <Compile Include="Controls\PartUIs\FileUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\FileUI.Designer.cs">
+    <Compile Include="Controls\PartUIs\FileUI.Designer.cs">
       <DependentUpon>FileUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\FolderPathButton.cs">
@@ -159,17 +171,23 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="Controls\FileSelector.cs">
+    <Compile Include="Controls\PartSelectors\FileSelector.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\FileSelector.Designer.cs">
+    <Compile Include="Controls\PartSelectors\FileSelector.Designer.cs">
       <DependentUpon>FileSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="Utilities\Utilities.cs" />
+    <EmbeddedResource Include="Controls\PartSelectors\InverterSelector.resx">
+      <DependentUpon>InverterSelector.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\PartUIs\InverterUI.resx">
+      <DependentUpon>InverterUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\CMessageBox.resx">
       <DependentUpon>CMessageBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\FileUI.resx">
+    <EmbeddedResource Include="Controls\PartUIs\FileUI.resx">
       <DependentUpon>FileUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\FolderPathButton.resx">
@@ -208,7 +226,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Controls\FileSelector.resx">
+    <EmbeddedResource Include="Controls\PartSelectors\FileSelector.resx">
       <DependentUpon>FileSelector.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\DataSources\Handover_Pack_Compiler.Properties.Resources.datasource" />
@@ -230,8 +248,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\PartSelectors\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
