--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -82,11 +82,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\PartSelectors\ModuleSelector.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\PartSelectors\ModuleSelector.Designer.cs">
+      <DependentUpon>ModuleSelector.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\PartSelectors\InverterSelector.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\PartSelectors\InverterSelector.Designer.cs">
       <DependentUpon>InverterSelector.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\PartUIs\ModuleUI.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\PartUIs\ModuleUI.Designer.cs">
+      <DependentUpon>ModuleUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\PartUIs\InverterUI.cs">
       <SubType>UserControl</SubType>
@@ -178,8 +190,14 @@
       <DependentUpon>FileSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="Utilities\Utilities.cs" />
+    <EmbeddedResource Include="Controls\PartSelectors\ModuleSelector.resx">
+      <DependentUpon>ModuleSelector.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\PartSelectors\InverterSelector.resx">
       <DependentUpon>InverterSelector.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\PartUIs\ModuleUI.resx">
+      <DependentUpon>ModuleUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\PartUIs\InverterUI.resx">
       <DependentUpon>InverterUI.cs</DependentUpon>
