--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompileWorker.cs" />
     <Compile Include="Controls\SummaryInformation.cs">
       <SubType>UserControl</SubType>
     </Compile>
