Summary now gets copied then filled

--- a/HandoverPackCompiler.csproj
+++ b/HandoverPackCompiler.csproj
@@ -68,6 +68,10 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Office.Interop.Word.15.0.4797.1003\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -275,6 +279,10 @@
     <EmbeddedResource Include="Controls\PartSelectors\FileSelector.resx">
       <DependentUpon>FileSelector.cs</DependentUpon>
     </EmbeddedResource>
+    <Content Include="SummaryDocTemplate.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="packages.config" />
     <None Include="Properties\DataSources\ActivePackStructure.datasource" />
     <None Include="Properties\DataSources\Handover_Pack_Compiler.Properties.Resources.datasource" />
     <None Include="Properties\DataSources\Handover_Pack_Compiler.Properties.Settings.datasource" />
